--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   background-color: black;
   color: white;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body.dark {
