fade in and projects added

--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -25,7 +25,7 @@
 }
 
 .project-list-group {
-    background-color: black;
+    background-color: transparent;
 }
 
 /* Estilos personalizados para el texto dentro de las tarjetas */
